; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/usbip/extr_vhci_hcd.c_vhci_device_unusable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/usbip/extr_vhci_hcd.c_vhci_device_unusable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usbip_device = type { i32, i32 }

@VDEV_ST_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usbip_device*)* @vhci_device_unusable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vhci_device_unusable(%struct.usbip_device* %0) #0 {
  %2 = alloca %struct.usbip_device*, align 8
  store %struct.usbip_device* %0, %struct.usbip_device** %2, align 8
  %3 = load %struct.usbip_device*, %struct.usbip_device** %2, align 8
  %4 = getelementptr inbounds %struct.usbip_device, %struct.usbip_device* %3, i32 0, i32 0
  %5 = call i32 @spin_lock(i32* %4)
  %6 = load i32, i32* @VDEV_ST_ERROR, align 4
  %7 = load %struct.usbip_device*, %struct.usbip_device** %2, align 8
  %8 = getelementptr inbounds %struct.usbip_device, %struct.usbip_device* %7, i32 0, i32 1
  store i32 %6, i32* %8, align 4
  %9 = load %struct.usbip_device*, %struct.usbip_device** %2, align 8
  %10 = getelementptr inbounds %struct.usbip_device, %struct.usbip_device* %9, i32 0, i32 0
  %11 = call i32 @spin_unlock(i32* %10)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
